--- a/Vocable/Supporting Files/Info.plist
+++ b/Vocable/Supporting Files/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>Vocable</string>
+	<string>Localized in Supporting Files &gt; InfoPlist.strings</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -23,11 +23,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Vocable uses your device&apos;s front camera to detect minimal changes in head orientation and position. This allows users with limited mobility to control an on-screen pointer to interact with the app. Camera data is used expressly for controlling the on-screen pointer. This data is not stored or transmitted in any way. Vocable needs permission to use the camera for this purpose.</string>
+	<string>Localized in Supporting Files &gt; InfoPlist.strings</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Vocable uses the microphone only when listening mode is enabled. Vocable transcribes audio into text; it is not stored or transmitted except when the user chooses to share this information anonymously with developers to help improve listening mode.</string>
+	<string>Localized in Supporting Files &gt; InfoPlist.strings</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>When listening mode is enabled, Vocable uses speech recognition to convert audio data into text. Transcribed speech is not stored or transmitted except when the user chooses to share this information anonymously with developers to help improve listening mode.</string>
+	<string>Localized in Supporting Files &gt; InfoPlist.strings</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
