--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 jobs:
   build-and-test:
     macos:
-      xcode: 13.3.0
+      xcode: 14.3.1
+    resource_class: macos.m1.medium.gen1
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: test
@@ -21,7 +22,8 @@ jobs:
 
   adhoc:
     macos:
-      xcode: 13.3.0
+      xcode: 14.3.1
+    resource_class: macos.m1.medium.gen1
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: adhoc
@@ -38,7 +40,8 @@ jobs:
 
   buildanddeploytotestflight:
     macos:
-      xcode: 13.3.0
+      xcode: 14.3.1
+    resource_class: macos.m1.medium.gen1
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: buildanddeploytotestflight
@@ -54,7 +57,8 @@ jobs:
           path: output
   export-localizations-for-crowdin:
     macos: 
-      xcode: 13.3.0
+      xcode: 14.3.1
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - run: rm ~/.ssh/id_rsa || true
@@ -76,7 +80,8 @@ jobs:
             
   update-localizations-test-deploy:
     macos: 
-      xcode: 13.3.0
+      xcode: 14.3.1
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - run: rm ~/.ssh/id_rsa || true
